# ironic-space-lisp

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: comments.isl  lisp.isl  list3.isl  mylen.isl  spawn.isl  watch.isl
ironic-space-lisp/src/: data.rs  errors.rs  interpreter.rs  main.rs  repl.rs
ironic-space-lisp/src/ast/passes/: arity.rs
ironic-space-lisp/src/syscall/: list.rs  math.rs
ironic-space-lisp/src/vm/: builder.rs
isl/: Cargo.toml
isl-ex/: .gitignore  README.md  mix.exs
isl-ex/config/: config.exs
isl-ex/lib/: isl.ex
isl-ex/lib/isl/: parser.ex
isl-ex/test/: isl_parser_test.exs  isl_test.exs
isl-suite/: Cargo.toml
isl-suite/src/: lib.rs  main.rs  render.html  render.rs
isl/examples/: after.isl  infinite.isl  lisp.isl  spawn.isl  syscalls.isl
isl/src/: compiler.rs  data.rs  env.rs  environment.rs  errors.rs  exec.rs  interpreter.rs  lib.rs  main.rs  packer.rs  repl.rs  self_hosted.rs  size.rs  util.rs
isl/src/ast/: mod.rs
isl/src/ast/passes/: function_lifter.rs  internal_macro.rs  local.rs  mod.rs  unbound.rs  unique.rs
isl/src/exec/: mod.rs  router.rs
isl/src/parser/: isl.rs  mod.rs
isl/src/syscall/: list.rs  math.rs  mod.rs  util.rs
isl/src/vm/: builder.rs  bytecode.rs  mod.rs  op.rs  tests.rs
isl/tests/: self_hosted_test.rs
src/: ast.rs  builtin.rs  compiler.rs  data.rs  environment.rs  error.rs  errors.rs  interpreter.rs  lib.rs  lisp.rs  main.rs  parser.rs  repl.rs  self_hosted.rs  size.rs  vm.rs
src/ast/: mod.rs
src/ast/passes/: arity.rs  function_lifter.rs  internal_macro.rs  list.rs  mod.rs  unbound.rs
src/frames/: application.rs  if_frame.rs  mod.rs  value.rs
src/parser/: ast.rs  isl.lalrpop  isl.rs  mod.rs
src/syscall/: list.rs  math.rs  mod.rs  util.rs
src/vm/: builder.rs  bytecode.rs  mod.rs  tests.rs
tests/: self_hosted_test.rs  verify_test.rs
